[gd_scene load_steps=13 format=4 uid="uid://cmj100jjgs47p"]

[ext_resource type="Script" uid="uid://bmrpgrdnx8tc6" path="res://Scripts/options_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d3niwtnprc4yq" path="res://Assests/BG.png" id="2"]
[ext_resource type="Texture2D" uid="uid://djhiq8vnwj6ou" path="res://Assests/UI.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bya2xbvcayjfm" path="res://Assests/pointer_j.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dpuckiqeiibig" path="res://Assests/grabber.png" id="5"]
[ext_resource type="PackedScene" uid="uid://mgpa611gop12" path="res://Scenes/install_sounds.tscn" id="6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qfavn"]
texture = ExtResource("3")
region_rect = Rect2(641, 839, 383, 127)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_syw6n"]
texture = ExtResource("3")
region_rect = Rect2(641, 359, 383, 127)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvaji"]
texture = ExtResource("3")
region_rect = Rect2(641, 520, 383, 137)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_inh3s"]
texture = ExtResource("3")
region_rect = Rect2(40, 644, 182, 178)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m6e8v"]
texture = ExtResource("3")
region_rect = Rect2(283, 646, 187, 174)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tqe32"]
texture = ExtResource("3")
region_rect = Rect2(962, 1148, 53, 52)

[node name="options_menu" type="Node2D"]
process_mode = 3
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(641.5, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1283.0
offset_bottom = 723.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -509.5
offset_top = -271.5
offset_right = 505.5
offset_bottom = 259.5
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer"]
layout_mode = 2
texture = ExtResource("3")
region_rect = Rect2(504, 163, 128, 127)
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 0
offset_left = 40.0
offset_top = 71.0
offset_right = 977.0
offset_bottom = 461.0
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 250

[node name="window" type="Label" parent="Control/MarginContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "WINDOW MODE"

[node name="OptionButton" type="OptionButton" parent="Control/MarginContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxTexture_qfavn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_syw6n")
theme_override_styles/normal = SubResource("StyleBoxTexture_cvaji")
theme_override_constants/arrow_margin = 20
theme_override_icons/arrow = ExtResource("4")
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 305

[node name="resolution" type="Label" parent="Control/MarginContainer/NinePatchRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "RESOLUTION"

[node name="OptionButtonR" type="OptionButton" parent="Control/MarginContainer/NinePatchRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxTexture_qfavn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_syw6n")
theme_override_styles/normal = SubResource("StyleBoxTexture_cvaji")
theme_override_constants/arrow_margin = 20
theme_override_icons/arrow = ExtResource("4")
alignment = 1

[node name="sounds" type="Label" parent="Control/MarginContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "SOUNDS"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/NinePatchRect"]
layout_mode = 2
offset_left = 40.0
offset_top = 316.0
offset_right = 977.0
offset_bottom = 508.0
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 475

[node name="all" type="Label" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "ALL MUSIC"

[node name="HSlider_all" type="HSlider" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_icons/grabber = ExtResource("5")
theme_override_icons/grabber_highlight = ExtResource("5")
min_value = -50.0
max_value = 25.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 580

[node name="sfx" type="Label" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SFX"

[node name="HSlider_sfx" type="HSlider" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_icons/grabber = ExtResource("5")
theme_override_icons/grabber_highlight = ExtResource("5")
min_value = -50.0
max_value = 25.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 290

[node name="bg_music" type="Label" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "BACKGROUND MUSIC"

[node name="HSlider_bg" type="HSlider" parent="Control/MarginContainer/NinePatchRect/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_icons/grabber = ExtResource("5")
theme_override_icons/grabber_highlight = ExtResource("5")
min_value = -50.0
max_value = 25.0
value = -10.0

[node name="blep" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1036.0
offset_top = 514.0
offset_right = 1138.0
offset_bottom = 614.0
theme_override_styles/hover = SubResource("StyleBoxTexture_inh3s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m6e8v")
theme_override_styles/normal = SubResource("StyleBoxTexture_inh3s")

[node name="quit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1099.0
offset_top = 76.0
offset_right = 1155.0
offset_bottom = 129.0
theme_override_styles/hover = SubResource("StyleBoxTexture_tqe32")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tqe32")
theme_override_styles/normal = SubResource("StyleBoxTexture_tqe32")

[node name="InstallSounds" parent="." instance=ExtResource("6")]
root_path = NodePath("..")

[connection signal="pressed" from="Control/blep" to="." method="_on_blep_pressed"]
[connection signal="pressed" from="Control/quit" to="." method="_on_quit_pressed"]
